--- a/src/core_plugins/kibana/public/dashboard/components/panel/panel.html
+++ b/src/core_plugins/kibana/public/dashboard/components/panel/panel.html
@@ -1,7 +1,7 @@
 <div class="panel panel-default" ng-switch on="panel.type" ng-if="savedObj || error">
   <div class="panel-heading">
     <span class="panel-title" title="{{::savedObj.title}}">
-      {{::savedObj.title}}
+      {{savedObj.vis.params.visTitle || savedObj.title}}
     </span>
     <div class="btn-group">
       <!--
