[OptimData] Kibana #14 remove kibana animation and logo when loading a dashboard

--- a/src/ui/views/ui_app.jade
+++ b/src/ui/views/ui_app.jade
@@ -21,17 +21,6 @@ block content
       height: 185px;
       padding: 0;
       text-align: center;
-      background: #3caed2;
-    }
-
-    .kibanaLoader__logo {
-      width: 150px;
-      height: 100%;
-      padding: 20px;
-      background-color: #E8488B;
-      -webkit-animation: colorShift 3s infinite;
-              animation: colorShift 3s infinite;
-      box-shadow: inset -10px 0 20px -10px rgba(0, 0, 0, 0.5);
     }
 
     .kibanaLoader__content {
@@ -51,7 +40,7 @@ block content
       -webkit-flex: 1 1 auto;
           -ms-flex: 1 1 auto;
               flex: 1 1 auto;
-      color: white;
+      color: black;
       font-size: 38px;
       font-weight: 300;
       font-family: "Open Sans", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -90,10 +79,8 @@ block content
 
   .kibanaWelcomeView
     .kibanaLoader
-      .kibanaLoader__logo
-        .kibanaWelcomeLogo
       .kibanaLoader__content
-        | Loading Kibana
+        | Loading...
 
   script.
     window.onload = function () {
