[OptimData] Remove global logo and add css rule for ror_logout button

--- a/src/ui/public/chrome/directives/global_nav/global_nav.less
+++ b/src/ui/public/chrome/directives/global_nav/global_nav.less
@@ -51,7 +51,7 @@
     display: flex; /* 1 */
     flex-direction: column; /* 1 */
     justify-content: space-between; /* 1 */
-    height: ~"calc(100% - @{global-nav-logo-height})"; /* 2 */
+    height: 100%;
     overflow-x: hidden; /* 3 */
     overflow-y: auto; /* 3 */
 
@@ -78,3 +78,7 @@
     .global-nav__links-section {
       flex: 0 0 auto; /* 1 */
     }
+
+#ror_logout {
+  display: none;
+}
